--- a/day-one/index.html
+++ b/day-one/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="style.css" />
     <title>Play some drums</title>
+    <script src="./sound-script.js" defer></script>
 </head>
 
 <body>
@@ -64,8 +65,6 @@
     <audio data-key="83" src="sounds/snare.wav"></audio>
     <audio data-key="68" src="sounds/tom.wav"></audio>
     <audio data-key="70" src="sounds/tink.wav"></audio>
-
-    <script src="./sound-script.js"></script>
 </body>
 
 </html>
