--- a/day-three/index.html
+++ b/day-three/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Scoped CSS Variables and JS</title>
     <link rel="stylesheet" href="styles.css" />
+    <script src="./script.js" defer></script>
 </head>
 
 <body>
@@ -18,7 +19,7 @@
         <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
         <label for="base">Base Color</label>
-        <input id="base" type="color" name="base" value="#ffc600">
+        <input id="base" type="color" name="base" value="#95221D">
     </div>
 
     <span>Painting by Abraham Mignon</span>
