Removed two Global Composite operations

--- a/day-eight/index.html
+++ b/day-eight/index.html
@@ -10,10 +10,8 @@
 
 <body>
     <canvas id="draw" width="800" height="800"></canvas>
-    <button onclick="clearCanvas()"> Clear Canvas</button>
+    <button class="clear-button" onclick="clearCanvas()"> Clear Canvas</button>
     <button onclick="changeGlobalCompositeOperation('source-over')"> source-over</button>
-    <button onclick="changeGlobalCompositeOperation('source-in')"> source-in</button>
-    <button onclick="changeGlobalCompositeOperation('source-out')"> source-out</button>
     <button onclick="changeGlobalCompositeOperation('source-atop')"> source-atop</button>
     <button onclick="changeGlobalCompositeOperation('destination-over')">destination-over</button>
     <button onclick="changeGlobalCompositeOperation('destination-in')">destination-in</button>
